--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
 		"_version": "1.44.8",
 		"id": "myapp",
 		"type": "application",
+        "i18n": "i18n/i18n.properties",
 		"title": "{{appTitle}}",
 		"description": "{{appDescription}}",
 		"applicationVersion": {
@@ -49,6 +50,12 @@
 			"cozy": true
 		},
         "models": {
+            "i18n": {
+				"type": "sap.ui.model.resource.ResourceModel",
+				"settings": {
+					"bundleName": "myapp.i18n.i18n"
+				}
+			},
 			"helloPanel": {
 				"type": "sap.ui.model.json.JSONModel",
 				"uri": "model/HelloPanel.json"
