add icon tab bar with message strip, simple form, toolbar

--- a/manifest.json
+++ b/manifest.json
@@ -59,6 +59,10 @@
 			"helloPanel": {
 				"type": "sap.ui.model.json.JSONModel",
 				"uri": "model/HelloPanel.json"
+			},
+			"address": {
+				"type": "sap.ui.model.json.JSONModel",
+				"uri": "model/Address.json"
 			}
 		}
 	}
